# machine-learning-studybook

./: README.md
.github/workflows/: deploy.yml  validate.yml
datathon-globo-recommendation/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrega.md  main.py  prometheus.yml  pyproject.toml
datathon-globo-recommendation/api/: main.py
datathon-globo-recommendation/api/routes/: healthcheck.py  links.py  news.py  raw_data.py  recommend.py  users.py
datathon-globo-recommendation/core/: bert_embeddings.py  config.py  database.py  logging.py  observability.py
datathon-globo-recommendation/datasources/: validacao.csv
datathon-globo-recommendation/datasources/train/: treino_parte1.csv  treino_parte2.csv  treino_parte3.csv  treino_parte4.csv  treino_parte5.csv  treino_parte6.csv
datathon-globo-recommendation/datasources/train/news/: itens-parte1.csv  itens-parte2.csv  itens-parte3.csv
datathon-globo-recommendation/db_models/: News.py  RawData.py  User.py
datathon-globo-recommendation/notebook-experiments/: data_cleaning.ipynb
datathon-globo-recommendation/schemas/: News.py
tech-challenge-01/: README.md
tech-challenge-01/api-vinicultura/: Makefile  pyproject.toml  (+6 more)
tech-challenge-02/: README.md  gabriel-dantas-entrega.md
tech-challenge-02/batch-pipeline-b3/: pyproject.toml
tech-challenge-02/batch-pipeline-b3/extract/: IBOVDia_29-07-24 (1).csv  IBOVDia_29-07-24.csv  scraping-b3.py
tech-challenge-02/batch-pipeline-b3/load/: data_load_transform.ipynb  s3_uploader.py
tech-challenge-02/batch-pipeline-b3/load/raw/: b3-2024-07-29.parquet
tech-challenge-02/batch-pipeline-b3/transform/: lambda_trigger.py
tech-challenge-02/batch-pipeline-b3/transform/glue/: glue_script.py
tech-challenge-03/: entrega.md
tech-challenge-03/api-iris-predict/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
tech-challenge-03/api-iris-predict/api/: main.py
tech-challenge-03/api-iris-predict/api/routes/: iris.py
tech-challenge-03/api-iris-predict/core/: config.py  database.py
tech-challenge-03/api-iris-predict/db_models/: IrisSpecies.py
tech-challenge-03/api-iris-predict/schemas/: IrisSpecies.py  __init__.py
tech-challenge-03/api-iris-predict/training_models/: iris_model.py
tech-challenge-03/api-iris-predict/utils/: data_format.py
tech-challenge-04/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrega.md  main.py  prometheus.yml  pyproject.toml
tech-challenge-04/api/: main.py
tech-challenge-04/api/routes/: healthcheck.py  links.py  lstm.py
tech-challenge-04/core/: config.py  observability.py  security.py
tech-challenge-04/datasources/: yfinance.py
tech-challenge-04/schemas/: LSTMTrainData.py
tech-challenge-04/training_models/: lstm_finance.py  metrics.py
(+39 files in other folders)
