[tool.poetry]
name = "batch-pipeline-b3"
version = "0.1.0"
description = ""
authors = ["gabriel-dantas98 <gabriel-dantas98@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.23.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
